--- a/app/views/browsing.html
+++ b/app/views/browsing.html
@@ -74,10 +74,11 @@
 
                         <div class="text">
                             <h3><a href="">{{stylist.name}}</a></h3>
-                            <rating ng-model="stylist.rating" max="5" readonly="true" on-hover="hoveringOver(value)" on-leave="overStar = null" titles="['one','two','three']" ></rating>
+                            <rating ng-model="stylist.rating" max="5" readonly="true" on-hover="hoveringOver(value)" on-leave="overStar = null" titles="['silver','gold','platinum']" ></rating>
                             <!-- <p class="price">{{stylist.tier}}</p>
                             <p class="price">{{stylist.event}}</p>
-                            <p class="price">{{stylist.rating}}</p> -->
+                            <p class="price">{{stylist.rating}}</p> 
+                            <p class="price">{{stylist.tags}}</p>-->
                         </div>
                         <!-- /.text -->
                     </div>
