--- a/app/views/home.html
+++ b/app/views/home.html
@@ -42,11 +42,11 @@ _________________________________________________________ -->
             <div class="container">
                 <div class="row">
                     <div class="carousel-caption">
-                        <h1>Find your new (stylish) friend</h1>
+                        <h1>Find your new [stylish] best friend</h1>
                         <h3>Simply select if you'd like a single look, or a complete wardobe overhaul</h3>
                         <p><a class="btn btn-lg btn-white" href="#content" role="button">I Need One Look</a>
                         </p>
-                        <p><a class="btn btn-lg btn-white" href="#content" role="button">Wardrobe Overhaul</a>
+                        <p><a class="btn btn-lg btn-white" href="#content" role="button">I Need a Wardrobe Makeover</a>
                         </p>
                     </div>
                 </div>
@@ -74,7 +74,7 @@ _________________________________________________________ -->
                     </div>
                     <div class="row">
                         <div class="col-sm-4">
-                            <h3>1: Choose Style Needs</h3>
+                            <h3>1: Tell Us What You Need</h3>
                             <div class="image">
                                 <a href="detail.html">
                                     <img src="img/product4.jpg" alt="" class="img-responsive image1">
@@ -85,7 +85,7 @@ _________________________________________________________ -->
                         </div>
                         <!-- /.col-sm-4 -->
                         <div class="col-sm-4">
-                            <h3>2: Pick Stylist</h3>
+                            <h3>2: Choose a Stylist</h3>
                             <div class="image">
                                 <a href="detail.html">
                                     <img src="img/product4.jpg" alt="" class="img-responsive image1">
@@ -188,14 +188,11 @@ _________________________________________________________ -->
                             <div class="product">
                                 <div class="image">
                                     <a href="detail.html">
-                                        <img src="img/product1.jpg" alt="" class="img-responsive image1">
+                                        <img src="img/stylist-work-3.jpg" alt="" class="img-responsive image1">
                                     </a>
                                 </div>
                                 <!-- /.image -->
-                                <div class="text">
-                                    <h3><a href="detail.html">Hair</a></h3>
-                                   
-                                </div>
+                              
                                 <!-- /.text -->
                             </div>
                             <!-- /.product -->
@@ -205,23 +202,24 @@ _________________________________________________________ -->
                             <div class="product">
                                 <div class="image">
                                     <a href="detail.html">
-                                        <img src="img/product2.jpg" alt="" class="img-responsive image1">
+                                        <img src="img/stylist-work-2.jpg" alt="" class="img-responsive image1">
                                     </a>
                                 </div>
-                                <!-- /.image -->
-                                <div class="text">
-                                    <h3><a href="detail.html">Face</a></h3>
+
+                            </div>
+                            <!-- /.product -->
+                        </div>
+
+                        <div class="col-md-3 col-sm-4">
+                            <div class="product">
+                                <div class="image">
+                                    <a href="detail.html">
+                                        <img src="img/stylist-work-1.jpg" alt="" class="img-responsive image1">
+                                    </a>
+                                </div>
                                   
-                                </div>
-                                <!-- /.text -->
-
-                                <div class="ribbon sale">
-                                    <div class="theribbon">NEW STYLISTS</div>
-                                    <div class="ribbon-background"></div>
-                                </div>
-                                <!-- /.ribbon -->
-
-                                <!-- /.ribbon -->
+                                <!-- /.image -->
+                                 <!-- /.text -->
                             </div>
                             <!-- /.product -->
                         </div>
@@ -230,30 +228,11 @@ _________________________________________________________ -->
                             <div class="product">
                                 <div class="image">
                                     <a href="detail.html">
-                                        <img src="img/product3.jpg" alt="" class="img-responsive image1">
+                                       <img src="img/stylist-work-4.jpg" alt="" class="img-responsive image1">
                                     </a>
                                 </div>
                                 <!-- /.image -->
-                                <div class="text">
-                                    <h3><a href="detail.html">Home</a></h3>
                                 
-                                </div>
-                                <!-- /.text -->
-                            </div>
-                            <!-- /.product -->
-                        </div>
-
-                        <div class="col-md-3 col-sm-4">
-                            <div class="product">
-                                <div class="image">
-                                    <a href="detail.html">
-                                        <img src="img/product4.jpg" alt="" class="img-responsive image1">
-                                    </a>
-                                </div>
-                                <!-- /.image -->
-                                <div class="text">
-                                    <h3><a href="detail.html">Dress</a></h3>
-                                </div>
                                 <!-- /.text -->
                             </div>
                             <!-- /.product -->
@@ -400,41 +379,36 @@ _________________________________________________________ -->
 
     <wrap-owlcarousel id="slider" class="owl-carousel owl-theme" style="padding-bottom: 5%" data-options="{autoPlay: 2000, stopOnHover: true, slideSpeed : 300, paginationSpeed : 400}">
 
+
         <div class="item">
             <a href="#">
-                <img src="img/slide1.jpg" alt="" class="img-responsive">
+                <img src="img/style1.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+        <div class="item">
+            <a href="#">
+                <img src="img/style02.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+        <div class="item">
+            <a href="#">
+                <img src="img/style6.jpg" alt="" class="img-responsive">
             </a>
         </div>
 
         <div class="item">
             <a href="#">
-                <img src="img/slide2.jpg" alt="" class="img-responsive">
+                <img src="img/style00.jpg" alt="" class="img-responsive">
             </a>
         </div>
 
         <div class="item">
             <a href="#">
-                <img src="img/slide3.jpg" alt="" class="img-responsive">
+                <img src="img/style99.jpg" alt="" class="img-responsive">
             </a>
         </div>
 
-        <div class="item">
-            <a href="#">
-                <img src="img/slide4.jpg" alt="" class="img-responsive">
-            </a>
-        </div>
-
-        <div class="item">
-            <a href="#">
-                <img src="img/slide5.jpg" alt="" class="img-responsive">
-            </a>
-        </div>
-
-        <div class="item">
-            <a href="#">
-                <img src="img/slide6.jpg" alt="" class="img-responsive">
-            </a>
-        </div>
+ 
 
 
     </wrap-owlcarousel>
