--- a/app/views/stylist.html
+++ b/app/views/stylist.html
@@ -15,11 +15,11 @@
 
 
                 <center>
-                    <div class="col-sm-12">
+                    <div class="col-md-12">
 
                         <div class="box text-center">
-                            <h3 class="text-uppercase">About Sofia</h3>
-                            <p>Sofia blablablablablablablablabla</p>
+                            <h3 class="text-uppercase">ABOUT SOFIA</h3>
+                            <p>A ten year industry veteran, Sofia has styled her fair share of professionals and celebrities alike. Her look can best be described as modern and sleek with an edge: "My client is the powerful woman on-the-go who doesn't want to sacrifice comfort in the name of style, but cares about looking her best all the time".  </p>
                         </div>
                     </div>
                 </center>
@@ -203,10 +203,12 @@
                 
                     <div class="row comment">
                         <center>
-                        <h2>2 reviews</h2>
+                     
                         </center>
                         <div class="col-md-8">
+                             <h2>2 reviews</h2>
                             <div class="col-sm-3 col-md-2 text-center-xs">
+
                                 <p>
                                     <img src="img/blog-avatar2.jpg" class="img-responsive img-circle" alt="">
                                 </p>
