more css changes

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -43,7 +43,7 @@ _________________________________________________________ -->
                 <div class="row">
                     <div class="carousel-caption">
                         <h1>Find your new [stylish] best friend</h1>
-                        <h3>Simply select if you'd like a single look, or a complete wardobe overhaul</h3>
+                        <h3>What can we help you with?</h3>
                         <p><a class="btn btn-lg btn-white" href="#content" role="button">I Need One Look</a>
                         </p>
                         <p><a class="btn btn-lg btn-white" href="#content" role="button">I Need a Wardrobe Makeover</a>
@@ -77,22 +77,22 @@ _________________________________________________________ -->
                             <h3>1: Tell Us What You Need</h3>
                             <div class="image">
                                 <a href="detail.html">
-                                    <img src="img/product4.jpg" alt="" class="img-responsive image1">
+                                    <img src="img/image99.jpg" alt="" class="img-responsive image1">
                                 </a>
                             </div>
                             <br />
-                            <p class="text-muted">Either one look or a complete wardrobe overhaul.</p>
+                            <p class="text-muted">Sometimes you need one look, and sometimes you need a little bit more help. Out stylists are here for you either way.</p>
                         </div>
                         <!-- /.col-sm-4 -->
                         <div class="col-sm-4">
                             <h3>2: Choose a Stylist</h3>
                             <div class="image">
                                 <a href="detail.html">
-                                    <img src="img/product4.jpg" alt="" class="img-responsive image1">
+                                    <img src="img/choose1.jpg" alt="" class="img-responsive image1">
                                 </a>
                             </div>
                             <br />
-                            <p class="text-muted">Browse our hand-selected and vetted stylists to find one that you feel comfortable with.</p>
+                            <p class="text-muted">Browse our carefully-selected and vetted stylists to find one that meets your style needs.</p>
                         </p>
                     </div>
                     <!-- /.col-sm-4 -->
@@ -100,60 +100,18 @@ _________________________________________________________ -->
                         <h3>3: Get Styled!</h3>
                         <div class="image">
                             <a href="detail.html">
-                                <img src="img/product4.jpg" alt="" class="img-responsive image1">
+                                <img src="img/outfit55.jpg" alt="" class="img-responsive image1">
                             </a>
                         </div>
                         <br />
-                        <p class="text-muted">Our stylist will contact you within 24 hours to start your style makeover.</p>
+                        <p class="text-muted">Our stylist will contact you within 24 hours to start your style makeover. Depending on your need, you will either receive 3 hand selected looks or a personal home visit.</p>
                     </ul>
                 </div>
                 <!-- /.col-sm-4 -->
             </div>
             <!-- /.row -->
 
-                    <div class="box text-center">
-                        <h3 class="text-uppercase">It's easy to get Styling help!</h3>
-
-                        <p>We have stylists for any need and price point. Simply select a stylist for a single look, or for a complete wardrobe overhaul.</p>
-
-
-
-                        <div class="same-height-row row">
-                            <div class="col-sm-3">
-                                <div class="box same-height clickable no-border text-center-xs text-center-sm">
-                                    <div class="icon"><i class="fa fa-heart-o"></i>
-                                    </div>
-                                    <h4><a href="text.html">Satisfied customers</a></h4>
-                                </div>
-                            </div>
-
-                            <div class="col-sm-3">
-                                <div class="box same-height clickable no-border text-center-xs text-center-sm">
-                                    <div class="icon"><i class="fa fa-tags"></i>
-                                    </div>
-                                    <h4><a href="text.html">Prices to fit your needs</a></h4>
-                                </div>
-                            </div>
-
-                            <div class="col-sm-3">
-                                <div class="box same-height clickable no-border text-center-xs text-center-sm">
-                                    <div class="icon"><i class="fa fa-send-o"></i>
-                                    </div>
-                                    <h4><a href="faq.html">Easy Scheduling</a></h4>
-                                </div>
-                            </div>
-
-                            <div class="col-sm-3">
-                                <div class="box same-height clickable no-border text-center-xs text-center-sm">
-                                    <div class="icon"><i class="fa fa-refresh"></i>
-                                    </div>
-                                    <h4><a href="contact.html">Community Resources</a></h4>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- /.row -->
-
-                    </div>
+                   
 
                 </div>
 
