--- a/app/views/home.html
+++ b/app/views/home.html
@@ -44,10 +44,8 @@ _________________________________________________________ -->
                     <div class="carousel-caption">
                         <h1>Find your new [stylish] best friend</h1>
                         <h3>Simply select if you'd like a single look, or a complete wardobe overhaul</h3>
-                        <p><a class="btn btn-lg btn-white" href="#content" role="button">I Need One Look</a>
-                        </p>
-                        <p><a class="btn btn-lg btn-white" href="#content" role="button">I Need a Wardrobe Makeover</a>
-                        </p>
+                        <p><a class="btn btn-lg btn-white" ui-sref="^.browsing" role="button">I Need One Look</a></p>
+                        <p><a class="btn btn-lg btn-white" ui-sref="^.browsing" role="button">I Need a Wardrobe Makeover</a></p>
                     </div>
                 </div>
             </div>
