--- a/app/views/stylist.html
+++ b/app/views/stylist.html
@@ -242,7 +242,7 @@
             <h4 class="text-muted">Tag #SofiaStylebar in your photos to be featured on Sofia's page.</h4>
         </div>
 
-    <div id="slider" class="owl-carousel owl-theme" style="padding-bottom: 5%">
+    <wrap-owlcarousel id="slider" class="owl-carousel owl-theme" style="padding-bottom: 5%" data-options="{autoPlay: 2000, stopOnHover: true, slideSpeed : 300, paginationSpeed : 400}">
 
         <div class="item">
             <a href="#">
@@ -281,7 +281,7 @@
         </div>
 
 
-    </div>    
+    </wrap-owlcarousel>    
     <center>   
      <p><a class="btn btn-lg " href="#content" role="button">BOOK NOW</a>     
     </center>   
