--- a/app/views/browsing.html
+++ b/app/views/browsing.html
@@ -58,7 +58,7 @@
             <div class="row products">
 
                 <div class="col-md-4 col-sm-4" ng-repeat="stylist in browsingCtrl.stylists | filter: browsingCtrl.filters | orderBy: browsingCtrl.sortBy">
-                    <div class="product">
+                    <div class="product stylists">
                         <div class="image">
                             <a ui-sref="^.stylist({ id: $index })" class="work-img">
                                 <img ng-src="{{stylist.img}}" alt="" class="img-responsive image1">
