changes to stylist page

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -42,13 +42,14 @@ _________________________________________________________ -->
             <div class="container">
                 <div class="row">
                     <div class="carousel-caption">
-                        <h1>Find your new [stylish] best friend</h1>
-                        <h3>Simply select if you'd like a single look, or a complete wardobe overhaul</h3>
-                        
-                        
+                        <h1>YOUR STYLE . . . OUR LITTLE SECRET</h1>
                         <h3>What can we help you with?</h3>
+                            <div class="col-md-6">
                         <p><a class="btn btn-lg btn-white" ui-sref="^.browsing" role="button">I Need One Look</a></p>
+                            </div>
+                              <div class="col-md-6">
                         <p><a class="btn btn-lg btn-white" ui-sref="^.browsing" role="button">I Need a Wardrobe Makeover</a></p>
+                    </div>
                     </div>
                 </div>
             </div>
@@ -263,12 +264,10 @@ _________________________________________________________ -->
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <div class="icon icon-lg"><i class="fa fa-group"></i>
-                            </div>
-                            <h1>Stylebar is the first Stylist Community</h1>
-                            <p class="lead">We have workshops, and mentorship programs to help you build your brand.</p>
+                            <h1>Your personal style solution. </h1>
+                            <p class="lead">Perfecting your look, one job interview, wedding, and public appearance at a time. </p>
                             <p class="text-center">
-                                <a href="index2.html" class="btn btn-white btn-lg">Apply to be a Stylebar stylist</a>
+                                <a href="index2.html" class="btn btn-white btn-lg">GET STARTED TODAY</a>
                             </p>
                         </div>
 
@@ -285,21 +284,23 @@ _________________________________________________________ -->
 _________________________________________________________ -->
 
                     <div class="box text-center">
-                        <h3 class="text-uppercase">Expert Advice</h3>
+                        <h3 class="text-uppercase">THE STYLE FILE</h3>
 
-                        <p class="text-italic text-large">How do you build a lifestyle brand? <span class="accent">Check our blog for advice from experts!</span>
+                        <p class="text-italic text-large">How do you find your own personal style? <span class="accent">Check our blog for advice from experts!</span>
                         </p>
                     </div>
 
                     <div id="blog-homepage" class="row">
                         <div class="col-sm-6">
                             <div class="post">
-                                <h4><a href="post.html">What are the hottest styles in 2015?</a></h4>
-                                <p class="author-category">By <a href="#">John Slim</a> in <a href="">Fashion and style</a>
+                                <h4><a href="post.html">The perfect motorcycle jacket</a></h4>
+                                <p class="author-category">By <a href="#">Jeanette Slim</a> in <a href="">Fashion and style</a>
                                 </p>
                                 <hr>
-                                <p class="intro">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-                                    ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+                                <p class="intro">Anyone can get away with wearing a leather jacket. Whether faux or real, girly or motorcycle, the possibilities are endless. Florals will instantly get toughened up, neutrals will look sophisticated.
+
+                                For me, the leather jacket is like this magic layer I can wear day or night, from spring till winter, knowing that the overall effect will always be youthful and a little bit rock’n’roll.
+                                .</p>
                                 <p class="read-more"><a href="post.html" class="btn btn-primary">Continue reading</a>
                                 </p>
                             </div>
@@ -307,12 +308,11 @@ _________________________________________________________ -->
 
                         <div class="col-sm-6">
                             <div class="post">
-                                <h4><a href="post.html">How to build your customer base</a></h4>
+                                <h4><a href="post.html">Polished boho-chic</a></h4>
                                 <p class="author-category">By <a href="#">John Slim</a> in <a href="">About Minimal</a>
                                 </p>
                                 <hr>
-                                <p class="intro">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-                                    ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+                                <p class="intro">Can we dress 70s boho-chic but still look polished? Can we wear simple outfits but look sophisticated? Can we be TRENDY professional women, and not sit fads out when we’re behind boring desks? When you think about your day-to-day looks basically we’re all stuck in the same pile of crap: tops, skirts, pants, heels or flats and (still) coats. </p>
                                 <p class="read-more"><a href="post.html" class="btn btn-primary">Continue reading</a>
                                 </p>
                             </div>
