--- a/app/views/main.html
+++ b/app/views/main.html
@@ -42,7 +42,7 @@ _________________________________________________________ -->
                     <a ui-sref=".browsing" class="dropdown-toggle" data-toggle="dropdown">Our Stylists</a>
                 </li>
                 <li class="dropdown yamm-fw">
-                    <a ui-sref=".home" class="dropdown-toggle" data-toggle="dropdown">Stylefile</a>
+                    <a ui-sref=".home" class="dropdown-toggle" data-toggle="dropdown">Style File</a>
                 </li>
             </ul>
 
@@ -50,20 +50,20 @@ _________________________________________________________ -->
         <!--/.nav-collapse -->
 
         <div class="navbar-collapse collapse right" id="basket-overview">
-            <a href="basket.html" class="btn btn-primary navbar-btn">Sign up</a>
+            <a href="basket.html" class="btn btn-primary navbar-btn">Log in</a>
         </div>
         <!--/.nav-collapse -->
 
-        <div class="navbar-collapse collapse right">
-            <button type="button" class="btn navbar-btn btn-default">
-                Customer Sign up
+        <div class="navbar-collapse collapse right" id="basket-overview">
+            <button type="button" class="btn btn-primary navbar-btn">
+                 Sign up
             </button>
         </div>
 
         <div class="navbar-collapse collapse right">
             <button type="button" class="btn navbar-btn btn-default" data-toggle="modal" data-target="#login-modal">
                 <span class="sr-only">User login</span>
-                Stylist Login
+                Apply to be a stylist
             </button>
         </div>
 
@@ -109,7 +109,7 @@ _________________________________________________________ -->
                         </li>
                         <li><a href="/#">Our Stylists</a>
                         </li>
-                        <li><a href="/#">Stylefile</a>
+                        <li><a href="/#">Style File</a>
                         </li>
                     </ul>
 
