--- a/app/views/stylist.html
+++ b/app/views/stylist.html
@@ -6,7 +6,11 @@
                                 <div class="carousel-caption">
                                     <h1>MEET SOFIA</h1>
                                     <h3>#modern #day-to-night #office-chic</h3>
-                                    <p><a class="btn btn-lg btn-white" href="#content" role="button">BOOK NOW</a>
+                                  
+                                    <button type="button" class="btn btn-primary navbar-btn">
+                                    BOOK NOW
+                                   </button>
+                            
                                 </div>
                             </div>
                         </div>
@@ -18,6 +22,7 @@
                     <div class="col-md-12">
 
                         <div class="box text-center">
+
                             <h3 class="text-uppercase">ABOUT SOFIA</h3>
                             <p>A ten year industry veteran, Sofia has styled her fair share of professionals and celebrities alike. Her look can best be described as modern and sleek with an edge: "My client is the powerful woman on-the-go who doesn't want to sacrifice comfort in the name of style, but cares about looking her best all the time".  </p>
                         </div>
