--- a/app/views/stylist.html
+++ b/app/views/stylist.html
@@ -24,6 +24,7 @@
                     </div>
                 </center>
                 </div>
+       <div class="container">
             <div class="col-sm-12">
 
                     <div class="box text-center">
@@ -39,7 +40,7 @@
                             <div class="product">
                                 <div class="image" style="height: 255px;">
                                     <a href="detail.html">
-                                        <img src="img/product1.jpg" alt="" class="img-responsive image1">
+                                        <img src="img/stylist-work-2.jpg" alt="" class="img-responsive image1">
                                     </a>
                                 </div>
                                 <!-- /.image -->
@@ -53,7 +54,7 @@
                             <div class="product">
                                 <div class="image" style="height: 255px;">
                                     <a href="detail.html">
-                                        <img src="img/product2.jpg" alt="" class="img-responsive image1">
+                                        <img src="img/stylist-work-3.jpg" alt="" class="img-responsive image1">
                                     </a>
                                 </div>
                                 <!-- /.image -->
@@ -70,7 +71,7 @@
                             <div class="product">
                                 <div class="image" style="height: 255px;">
                                     <a href="detail.html">
-                                        <img src="img/product3.jpg" alt="" class="img-responsive image1">
+                                        <img src="img/stylist-work-4.jpg" alt="" class="img-responsive image1">
                                     </a>
                                 </div>
                         
@@ -83,7 +84,7 @@
                             <div class="product">
                                 <div class="image" style="height: 255px;">
                                     <a href="detail.html">
-                                        <img src="img/product4.jpg" alt="" class="img-responsive image1">
+                                        <img src="img/stylist-work-5.jpg" alt="" class="img-responsive image1">
                                     </a>
                                 </div>
                                 <!-- /.image -->
@@ -246,37 +247,29 @@
 
         <div class="item">
             <a href="#">
-                <img src="img/slide1.jpg" alt="" class="img-responsive">
+                <img src="img/style1.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+        <div class="item">
+            <a href="#">
+                <img src="img/style02.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+        <div class="item">
+            <a href="#">
+                <img src="img/style6.jpg" alt="" class="img-responsive">
             </a>
         </div>
 
         <div class="item">
             <a href="#">
-                <img src="img/slide2.jpg" alt="" class="img-responsive">
+                <img src="img/style00.jpg" alt="" class="img-responsive">
             </a>
         </div>
 
         <div class="item">
             <a href="#">
-                <img src="img/slide3.jpg" alt="" class="img-responsive">
-            </a>
-        </div>
-
-        <div class="item">
-            <a href="#">
-                <img src="img/slide4.jpg" alt="" class="img-responsive">
-            </a>
-        </div>
-
-        <div class="item">
-            <a href="#">
-                <img src="img/slide5.jpg" alt="" class="img-responsive">
-            </a>
-        </div>
-
-        <div class="item">
-            <a href="#">
-                <img src="img/slide6.jpg" alt="" class="img-responsive">
+                <img src="img/style99.jpg" alt="" class="img-responsive">
             </a>
         </div>
 
@@ -285,3 +278,5 @@
     <center>   
      <p><a class="btn btn-lg " href="#content" role="button">BOOK NOW</a>     
     </center>   
+
+</div>
