--- a/app/views/home.html
+++ b/app/views/home.html
@@ -26,7 +26,7 @@ _________________________________________________________ -->
                     </form>
 
                     <p class="text-center text-muted">Not registered yet?</p>
-                    <p class="text-center text-muted"><a href="register.html"><strong>Register now</strong></a>! It is easy and done in 1&nbsp;minute and gives you access to a great community!</p>
+                    <p class="text-center text-muted"><a href="#"><strong>Register now</strong></a>! It is easy and done in 1&nbsp;minute and gives you access to a great community!</p>
 
                 </div>
             </div>
@@ -78,7 +78,7 @@ _________________________________________________________ -->
                         <div class="col-sm-4">
                             <h3>1: Tell Us What You Need</h3>
                             <div class="image">
-                                <a href="detail.html">
+                                <a href="#">
                                     <img src="img/image99.jpg" alt="" class="img-responsive image1">
                                 </a>
                             </div>
@@ -89,7 +89,7 @@ _________________________________________________________ -->
                         <div class="col-sm-4">
                             <h3>2: Choose a Stylist</h3>
                             <div class="image">
-                                <a href="detail.html">
+                                <a href="#">
                                     <img src="img/choose1.jpg" alt="" class="img-responsive image1">
                                 </a>
                             </div>
@@ -101,7 +101,7 @@ _________________________________________________________ -->
                     <div class="col-sm-4">
                         <h3>3: Get Styled!</h3>
                         <div class="image">
-                            <a href="detail.html">
+                            <a href="#">
                                 <img src="img/outfit55.jpg" alt="" class="img-responsive image1">
                             </a>
                         </div>
@@ -147,7 +147,7 @@ _________________________________________________________ -->
                         <div class="col-md-3 col-sm-4">
                             <div class="product">
                                 <div class="image">
-                                    <a href="detail.html">
+                                    <a href="#">
                                         <img src="img/stylist-work-3.jpg" alt="" class="img-responsive image1">
                                     </a>
                                 </div>
@@ -161,7 +161,7 @@ _________________________________________________________ -->
                         <div class="col-md-3 col-sm-4">
                             <div class="product">
                                 <div class="image">
-                                    <a href="detail.html">
+                                    <a href="#">
                                         <img src="img/stylist-work-2.jpg" alt="" class="img-responsive image1">
                                     </a>
                                 </div>
@@ -173,7 +173,7 @@ _________________________________________________________ -->
                         <div class="col-md-3 col-sm-4">
                             <div class="product">
                                 <div class="image">
-                                    <a href="detail.html">
+                                    <a href="#">
                                         <img src="img/stylist-work-1.jpg" alt="" class="img-responsive image1">
                                     </a>
                                 </div>
@@ -187,7 +187,7 @@ _________________________________________________________ -->
                         <div class="col-md-3 col-sm-4">
                             <div class="product">
                                 <div class="image">
-                                    <a href="detail.html">
+                                    <a href="#">
                                        <img src="img/stylist-work-4.jpg" alt="" class="img-responsive image1">
                                     </a>
                                 </div>
@@ -267,7 +267,7 @@ _________________________________________________________ -->
                             <h1>Your personal style solution. </h1>
                             <p class="lead">Perfecting your look, one job interview, wedding, and public appearance at a time. </p>
                             <p class="text-center">
-                                <a href="index2.html" class="btn btn-white btn-lg">GET STARTED TODAY</a>
+                                <a ui-sref="^.browsing" class="btn btn-white btn-lg">GET STARTED TODAY</a>
                             </p>
                         </div>
 
@@ -301,7 +301,7 @@ _________________________________________________________ -->
 
                                 For me, the leather jacket is like this magic layer I can wear day or night, from spring till winter, knowing that the overall effect will always be youthful and a little bit rock’n’roll.
                                 .</p>
-                                <p class="read-more"><a href="post.html" class="btn btn-primary">Continue reading</a>
+                                <p class="read-more"><a href class="btn btn-primary">Continue reading</a>
                                 </p>
                             </div>
                         </div>
@@ -313,7 +313,7 @@ _________________________________________________________ -->
                                 </p>
                                 <hr>
                                 <p class="intro">Can we dress 70s boho-chic but still look polished? Can we wear simple outfits but look sophisticated? Can we be TRENDY professional women, and not sit fads out when we’re behind boring desks? When you think about your day-to-day looks basically we’re all stuck in the same pile of crap: tops, skirts, pants, heels or flats and (still) coats. </p>
-                                <p class="read-more"><a href="post.html" class="btn btn-primary">Continue reading</a>
+                                <p class="read-more"><a href class="btn btn-primary">Continue reading</a>
                                 </p>
                             </div>
 
