--- a/app/views/main.html
+++ b/app/views/main.html
@@ -50,7 +50,7 @@ _________________________________________________________ -->
         <!--/.nav-collapse -->
 
         <div class="navbar-collapse collapse right" id="basket-overview">
-            <a href="basket.html" class="btn btn-primary navbar-btn">Log in</a>
+            <a href class="btn btn-primary navbar-btn">Log in</a>
         </div>
         <!--/.nav-collapse -->
 
@@ -91,7 +91,7 @@ _________________________________________________________ -->
 
 <!-- *** NAVBAR END *** -->
 
-<div ui-view></div>
+<div ui-view autoscroll="true"></div>
 
 
 <!-- *** FOOTER *** 
